--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Survey Form</title>
   </head>
   <body>
-    <h1 id="title">Scripters Survey Form</h1>
-    <p id="description">thank you for taking time to improve the platform</p>
+    <h1 id="title" style="color: white;">Scripters Survey Form</h1>
+    <p id="description" style="color: white;">
+      Thank you for taking time to improve the platform.
+    </p>
     <form id="survey-form">
       <div class="row">
         <div class="label-input">
@@ -50,7 +52,7 @@
           <div class="label-input">
             <label>Would you recommend a friend to scrpiters academy?</label>
           </div>
-          <div class="input-script">
+          <div class="radios">
             <input type="radio" id="male" name="Yes" value="Yes" />
             <label for="Yes">Yes</label><br />
             <input type="radio" id="No" name="No" value="No" />
@@ -63,23 +65,14 @@
           <div class="label-input">
             <label>What would you like to see improved?</label>
           </div>
-          <div class="input-script">
-            <input
-              type="checkbox"
-              id="courses"
-              name="courses"
-              value="courses"
-            />
-            <label for="vehicle1"> courses</label><br />
-            <input type="checkbox" id="forum" name="forum" value="forum" />
-            <label for="vehicle2"> forum</label><br />
-            <input
-              type="checkbox"
-              id="meetups"
-              name="meetups"
-              value="meetups"
-            />
-            <label for="vehicle3"> meetups</label><br /><br />
+          <div class="radios">
+            <input type="checkbox" />
+            <label class="container">Forums </label>
+            <br />
+            <input type="checkbox" />
+            <label class="container">courses </label><br />
+            <input type="checkbox" />
+            <label class="container">Meetups </label>
           </div>
         </div>
         <div class="row">
@@ -90,10 +83,7 @@
             <textarea name="" id="" cols="30" rows="10"></textarea>
           </div>
         </div>
-        <button
-          style="width: 100%; background-color: black; color: antiquewhite;"
-          type="submit"
-        >
+        <button type="submit">
           Submit
         </button>
       </div>
